<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBatteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvBrightnessLabel" />

    <TextView
        android:id="@+id/tvBrightnessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brightness_label"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBatteryLevel" />

    <TextView
        android:id="@+id/tvBrightnessPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50%"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tvBrightnessLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBrightnessLabel" />

    <SeekBar
        android:id="@+id/sbBrightness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBrightnessLabel" />

    <TextView
        android:id="@+id/tvDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_label"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbBrightness" />

    <LinearLayout
        android:id="@+id/duration_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDurationLabel">

        <EditText
            android:id="@+id/etDuration"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/timer_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="seconds" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_layout" />

    <TextView
        android:id="@+id/tvTimerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_status_default"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTimer" />

    <TextView
        android:id="@+id/tvStartBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_battery"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimerStatus" />

    <TextView
        android:id="@+id/tvEndBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_battery"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartBattery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Close" />

        <Button
            android:id="@+id/btnScreenshot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Take Screenshot" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
